WIP fixing rendered for charts

--- a/eQueue/eQueue-war/web/homepage.xhtml
+++ b/eQueue/eQueue-war/web/homepage.xhtml
@@ -88,7 +88,17 @@
                     </h:panelGrid>
                 </p:panel>
             </p:link>
-            
+            <p:link outcome="analyticsPage.xhtml">
+                <p:panel class="link-panel-container">
+                    <h:panelGrid class="vertically-centered">
+                        <span class="analytics-icon custom-icon-homepage"/>
+                        <div class="link-text-styling">
+                            <p style="margin: 0">Analytics</p>
+                        </div>
+                    </h:panelGrid>
+                </p:panel>
+            </p:link>
+
         </div>
     </ui:define>
 </ui:composition>
